@@ -2,6 +2,7 @@ Changelog for Babel.
 
 Babel 3.0.0-dev
 ==============
+- [#78][#62] added outputSeparator for BabelLinks
 - [#75] Replaced deprecated method clearCache() with refresh()
 - [#84] optimize OnResourceDuplicate
 - [#44][#29] Using cultureKey instead of contextKey on BabelTranslation snippet
